fix tabs button alignment

--- a/src/ensembl/src/content/app/entity-viewer/gene-view/GeneView.scss
+++ b/src/ensembl/src/content/app/entity-viewer/gene-view/GeneView.scss
@@ -42,7 +42,7 @@ $backgroundColor: $black;
   top: -105px;
   height: 100%;
   background-color: $backgroundColor;
-  padding-left: 228px;
+  padding-left: 180px;
 }
 
 .geneViewTabContent {
